# p2pVpn

./: .gitignore  Cargo.toml  EXIT-NODE-GUIDA.md  EXIT-NODE.md  README.md  STATO-E-PROSSIMI-PASSI.md
client-tauri/: README.md
client-tauri/src/: index.html  main.js
client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-tauri/src-tauri/capabilities/: default.json
client-tauri/src-tauri/src/: lib.rs  main.rs
deploy/: ecosystem.config.js
deploy/nginx/: abc.edoardocasella.it.conf
deploy/raspberry/: README.md  cross-build.sh  install.sh  p2p-vpn.service
src/: db.rs  lib.rs  proto.rs  route.rs  vpn.rs  web.rs
