[package]
name = "p2p-holepunch"
version = "0.2.0"
edition = "2021"
description = "Control plane (backoffice + login) + signaling + UDP hole punching in Rust"

# Shared library: control protocol, SQLite storage and web backoffice.
[lib]
name = "p2p_holepunch"
path = "src/lib.rs"

# Server / control plane binary (build for Linux / DigitalOcean).
# Requires the `server` feature (axum + SQLite). Enabled by default.
[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

# Client binary (build for your devices).
[[bin]]
name = "client"
path = "src/bin/client.rs"

[features]
# The `server` feature enables the control plane (backoffice + storage). Clients
# (including the Tauri one) use the library with `default-features = false`: they
# get only the `proto` module, without pulling in axum/SQLite/argon2.
default = ["server"]
server = ["dep:axum", "dep:rusqlite", "dep:argon2", "dep:rand_core"]
# VPN data plane (exit node): TUN interface + forwarding. Requires root at
# runtime; run it on a real host (typically Linux for the exit).
vpn = ["dep:tun", "dep:boringtun", "dep:getrandom", "dep:base64"]

[dependencies]
# Async runtime (used by signaling and backoffice).
tokio = { version = "1", features = ["full"] }
# Serialization/deserialization of control messages and JSON APIs.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TLS per il client CLI: parla HTTPS col backoffice in produzione (device-code
# login). Su macOS usa Security.framework, niente OpenSSL da installare.
tokio-native-tls = "0.3"
# --- only with the `server` feature ---
# Web backoffice (HTTP routing, forms, query).
axum = { version = "0.8", features = ["form", "query"], optional = true }
# Storage: embedded SQLite (bundled = compiles SQLite, no system dependency).
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
# Password hashing (argon2) + RNG for tokens/keys.
argon2 = { version = "0.5", optional = true }
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
# --- only with the `vpn` feature ---
# TUN interface (async). Exit-side routing/NAT is handled with system commands
# (see EXIT-NODE.md).
tun = { version = "0.8", features = ["async"], optional = true }
# Tunnel encryption: userspace WireGuard (boringtun, which re-exports X25519).
boringtun = { version = "0.7", optional = true }
getrandom = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }

# --- cross-compilation to Linux (e.g. Raspberry Pi aarch64) ---
# On non-macOS targets `native-tls` uses OpenSSL. Building OpenSSL from source
# (`vendored`) lets us cross-compile (with cargo-zigbuild) and build natively on
# the Pi without needing a system libssl. On macOS this is inert: native-tls uses
# Security.framework, so this dependency is not compiled at all there.
[target.'cfg(not(target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
