[package]
name = "p2p-client"
version = "0.1.0"
edition = "2021"
description = "Client desktop (Tauri) per la rete P2P: login via browser + hole punching"

[lib]
# Tauri v2: la logica sta nella lib `app_lib`, il binario la avvia.
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Riusa SOLO il protocollo condiviso (proto), senza SQLite/axum.
p2p-holepunch = { path = "../..", default-features = false }
